--- a/index.html
+++ b/index.html
@@ -5,41 +5,75 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bitcoin momentum</title>
-    <link rel="stylesheet" href="style.css">
+    <link href="/dist/output.css" rel="stylesheet">
     <script src="script.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
-<body>
-    <h1> Bitcoin Momentum Trading </h1>
-    <h2> Historical Data </h2>
-    <div class="inputs">
-        <label for="initial">Initial $</label>
-        <input type="number" id="initial" name="initial" placeholder="Enter Initial Amount($)" value = "1000" step="100">
-        <label for="multiplier">Multiplier</label>
-        <input type="number" id="multiplier" name="multiplier" placeholder="Enter Multiplier" maxlength="2" value="2" step="0.1">
-        <select name="selltiming" id="selltiming" required>
-            <option value="None" disabled>When to sell after Buy (default 12 months)</option>
-            <option value="1">1 Month</option>
-            <option value="2">2 Month</option>
-            <option value="3">3 Months</option>
-            <option value="4">4 Months</option>
-            <option value="6">6 Months</option>
-            <option value="12" selected>12 Months</option>
-            <option value="15">15 Months</option>
-            <option value="18">18 Months</option>
-            <option value="21">21 Months</option>
-            <option value="24">24 Months</option>
-        </select>
-        <label for="start">Start Date</label>
-        <input type="date" id="startdate" name="startdate" value="2013-04-28" min="2013-04-28" max="2023-03-31"> <!-- first date available on coingecko-->
-        <label for="start">End Date</label>
-        <input type="date" id="enddate" name="enddate" value="2023-03-31" min="2013-04-28" max="2023-03-31">
+<body class="bg-veryDarkBlue font-['Montserrat']">
+    <div class="container mx-auto mt-12 p-6 xl:w-8/12 border-solid border-4 border-darkBlue">
+        <div class="container flex flex-col items-center px-6 mx-auto space-x-5 space-y-15 md:flex-row md:space-y-0">
+            <div class="flex flex-col space-y-3 md:w-1/2 xl:w-2/3">
+                <div class="flex items-center">
+                    <div class="pt-1 mr-2 md:hidden">
+                        <img src="img/bitcoin.svg" alt="" class="src">
+                    </div>
+                    <h1 class="text-brightRedSupLight text-2xl max-w-lg font-bold text-center md:text-4xl md:text-left"><span class="hidden md:inline-block w-9 align-bottom"><img src="img/bitcoin.svg" alt="" class="src"></span> Bitcoin Momentum Trading </h1>
+                </div>
+                <p class="max-w-lg text-center text-darkGrayishBlue md:text-left">It is a momentum based strategy which applies previous observation that when bitcoin price rises 100% from the lowest point, it will have momentum for 1 year. By default, it will show the result when you enter position after 100% rise and sell after 1 year. Parameters are customizable. </p>
+            </div>
+            <div class="container flex flex-col space-y-2 mt-5 md:w-1/2 xl:w-1/3">
+                <div class="flex flex-row justify-between items-center">
+                    <label class="text-veryPaleRed text-xl" for="initial">Initial $</label>
+                    <input class="bg-darkBlue text-white py-1 rounded-lg font-bold text-center w-1/2" type="number" id="initial" name="initial" placeholder="Enter Initial Amount($)" value = "1000" step="100">
+                </div>
+                <div class="flex flex-row justify-between items-center">
+                    <label class="text-veryPaleRed text-xl" for="multiplier">Multiplier</label>
+                    <input class="bg-darkBlue text-white py-1 rounded-lg font-bold text-center w-1/2" type="number" id="multiplier" name="multiplier" placeholder="Enter Multiplier" maxlength="2" value="2" step="0.1">
+                </div>
+                <div class="flex flex-row justify-between items-center">
+                    <p class="text-xl text-veryPaleRed ">Sell timing</p>
+                    <select class="bg-darkBlue text-white py-1 rounded-lg font-bold text-center w-1/2" name="selltiming" id="selltiming" required>
+                        <option value="1">1 Month</option>
+                        <option value="2">2 Month</option>
+                        <option value="3">3 Months</option>
+                        <option value="4">4 Months</option>
+                        <option value="6">6 Months</option>
+                        <option value="12" selected>12 Months</option>
+                        <option value="15">15 Months</option>
+                        <option value="18">18 Months</option>
+                        <option value="21">21 Months</option>
+                        <option value="24">24 Months</option>
+                    </select>
+                </div>
+                <div class="flex flex-row justify-between items-center">
+                    <label class="text-veryPaleRed text-xl" for="start">Start Date</label>
+                    <input class="bg-darkBlue text-white py-1 rounded-lg font-bold text-center w-1/2" type="date" id="startdate" name="startdate" value="2020-04-28" min="2013-04-28" max="2023-03-31"> <!-- first date available on coingecko-->
+                </div>
+                <div class="flex flex-row justify-between items-center">
+                    <label class="text-veryPaleRed text-xl" for="start">End Date</label>
+                    <input class="bg-darkBlue text-white py-1 rounded-lg font-bold text-center w-1/2" type="date" id="enddate" name="enddate" value="2023-03-31" min="2013-04-28" max="2023-03-31">
+                </div>
+                <div class="container flex pt-8 mx-auto">
+                    <button class="text-white font-bold text-xl bg-brightRed rounded-full px-6 p-1 hover:bg-brightRedLight mx-auto w-1/2" id="backtestBtn" type="submit">BackTest</button>
+                </div>
+            </div>            
+        </div>
     </div>
-    <button id="backtestBtn" type="submit">BackTest</button>
-    <table>
-        <thead id="tablehead"></thead>
-        <tbody id="pricetable"></tbody>
-    </table>
-    <h3 id="finalresult"></h3>
-    <h3 id="enterprice"></h3>
+    <div class="text-brightRedLight container mx-auto mt-12 xl:w-8/12">
+        <div class="flex flex-col text-center">
+            <table class="table-fixed">
+                <thead class="mb-5" id="tablehead"></thead>
+                <tbody id="pricetable"></tbody>
+            </table>
+        </div>
+        <div class="flex flex-col mt-5 items-center space-y-5 mb-5 text-center text-brightRed text-2xl">
+            <h3 id="finalresult"></h3>
+            <h3 id="enterprice"></h3>
+            <h3 id="currentprice"></h3>
+        </div>
+    </div>
+    <div class="container mx-auto relative min-h-auto w-100% flex flex-grow-1">
+        <canvas class="mt-12 mb-12" id="myChart"></canvas>
+    </div>
 </body>
 </html>
