--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bitcoin momentum</title>
     <link href="/dist/output.css" rel="stylesheet">
-    <link rel="stylesheet" href="/dest/output.css">
+    <link rel="stylesheet" href="/dist/output.css">
     <script src="script.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
@@ -48,7 +48,7 @@
                 </div>
                 <div class="flex flex-row justify-between items-center">
                     <label class="text-veryPaleRed text-xl" for="start">Start Date</label>
-                    <input class="bg-darkBlue text-white py-1 rounded-lg font-bold text-center w-1/2" type="date" id="startdate" name="startdate" value="2020-04-28" min="2013-04-28" max="2023-03-31"> <!-- first date available on coingecko-->
+                    <input class="bg-darkBlue text-white py-1 rounded-lg font-bold text-center w-1/2" type="date" id="startdate" name="startdate" value="2013-04-28" min="2013-04-28" max="2023-03-31"> <!-- first date available on coingecko-->
                 </div>
                 <div class="flex flex-row justify-between items-center">
                     <label class="text-veryPaleRed text-xl" for="start">End Date</label>
