--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bitcoin momentum</title>
-    <link href="/dist/output.css" rel="stylesheet">
-    <link rel="stylesheet" href="/dist/output.css">
+    <link rel="stylesheet" href="dist/output.css">
     <script src="script.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
