--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <div class="container flex flex-col items-center px-6 mx-auto space-x-5 space-y-15 md:flex-row md:space-y-0">
             <div class="flex flex-col space-y-3 md:w-1/2 xl:w-2/3">
                 <div class="flex items-center">
-                    <div class="pt-1 mr-2 md:hidden">
+                    <div class="pt-1 md:hidden">
                         <img src="img/bitcoin.svg" alt="" class="src">
                     </div>
-                    <h1 class="text-brightRedSupLight text-2xl max-w-lg font-bold text-center md:text-4xl md:text-left"><span class="hidden md:inline-block w-9 align-bottom"><img src="img/bitcoin.svg" alt="" class="src"></span> Bitcoin Momentum Trading </h1>
+                    <h1 class="text-brightRedSupLight text-2xl font-bold text-center md:text-4xl md:text-left"><span class="hidden md:inline-block w-9 align-bottom"><img src="img/bitcoin.svg" alt="" class="src"></span> Bitcoin Momentum Trading </h1>
                 </div>
                 <p class="max-w-lg text-center text-darkGrayishBlue md:text-left">It is a momentum based strategy which applies previous observation that when bitcoin price rises 100% from the lowest point, it will have momentum for 1 year. By default, it will show the result when you enter position after 100% rise and sell after 1 year. Parameters are customizable. </p>
             </div>
