--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
                 <div class="flex flex-row justify-between items-center">
                     <label class="text-veryPaleRed text-xl" for="start">End Date</label>
-                    <input class="bg-darkBlue text-white py-1 rounded-lg font-bold text-center w-1/2" type="date" id="enddate" name="enddate" value="2023-03-31" min="2013-04-28" max="2023-03-31">
+                    <input class="bg-darkBlue text-white py-1 rounded-lg font-bold text-center w-1/2" type="date" id="enddate" name="enddate" value="2023-03-31" min="2013-04-28" max="">
                 </div>
                 <div class="container flex pt-8 mx-auto">
                     <button class="text-white font-bold text-xl bg-brightRed rounded-full px-6 p-1 hover:bg-brightRedLight mx-auto w-1/2" id="backtestBtn" type="submit">BackTest</button>
