improve readability. End date is now today's date by default. result displays correctly based on current position

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     </div>
                     <h1 class="text-brightRedSupLight text-2xl font-bold text-center md:text-4xl md:text-left"><span class="hidden md:inline-block w-9 align-bottom"><img src="img/bitcoin.svg" alt="" class="src"></span> Bitcoin Momentum Trading </h1>
                 </div>
-                <p class="max-w-lg text-center text-darkGrayishBlue md:text-left">It is a momentum based strategy which applies previous observation that when bitcoin price rises 100% from the lowest point, it will have momentum for 1 year. By default, it will show the result when you enter position after 100% rise and sell after 1 year. Parameters are customizable. </p>
+                <p class="max-w-lg text-center text-darkGrayishBlue md:text-left">This strategy is based on the observation that when Bitcoin's price doubles from its lowest point, it tends to maintain upward momentum for one year. The default setting calculates the outcome if you buy after the price has doubled and sell one year later. However, you can adjust the parameters to fit your preferences. </p>
             </div>
             <div class="container flex flex-col space-y-2 mt-5 md:w-1/2 xl:w-1/3">
                 <div class="flex flex-row justify-between items-center">
@@ -59,14 +59,14 @@
             </div>            
         </div>
     </div>
-    <div class="text-brightRedLight container mx-auto mt-12 xl:w-8/12">
-        <div class="flex flex-col text-center">
-            <table class="table-fixed">
-                <thead class="mb-5" id="tablehead"></thead>
+    <div class="text-white container mx-auto mt-12 xl:w-8/12 ">
+        <div class="flex flex-col text-center ">
+            <table class="table-fixed border-solid border-4 border-white">
+                <thead class="mb-5 border-solid border-4 border-white" id="tablehead"></thead>
                 <tbody id="pricetable"></tbody>
             </table>
         </div>
-        <div class="flex flex-col mt-5 items-center space-y-5 mb-5 text-center text-brightRed text-2xl">
+        <div class="flex flex-col mt-5 items-center space-y-5 mb-5 text-center text-white text-2xl">
             <h3 id="finalresult"></h3>
             <h3 id="enterprice"></h3>
             <h3 id="currentprice"></h3>
